--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <rdfunit.version>0.7.4-SNAPSHOT</rdfunit.version>
+        <rdfunit.version>0.7.4</rdfunit.version>
         <slf4j.version>1.7.12</slf4j.version>
     </properties>
     <build>
